integrate with clojure-mcp - wow !